--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@faker-js/faker": "^7.6.0",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
     "rxjs": "~7.5.0",
