--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@faker-js/faker": "^7.6.0",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
