--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
     "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
